--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "4.17.1",
     "http-errors": "^1.7.3",
     "lodash": "4.17.15",
+    "mysql2": "^2.1.0",
     "pg": "7.18.1",
     "sequelize": "5.21.4",
     "sequelize-cli": "^5.5.1",
